--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+# Prisma Client output 
+**/generated/
+**/node_modules/
+**/.turbo/
+**/.next/
+**/dist/
