--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       packages: write
@@ -29,12 +29,12 @@ jobs:
         run: npm ci
 
       - name: 🏷️ Version packages
-        run: npx changeset version
+        run: npx @changesets/cli version
 
       - name: 🚀 Create release and publish
         uses: changesets/action@v1
         with:
-          publish: npx changeset publish
+          publish: npx @changesets/cli publish
+          commit: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
