--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,6 +55,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
