--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -62,6 +62,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemailer": "^7.0.5",
+    "passport-google-oauth2": "^0.2.0",
     "prettier": "^3.4.2",
     "prisma": "^6.10.1",
     "source-map-support": "^0.5.21",
